--- a/testevr.html
+++ b/testevr.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Análise Ergonômica e Mapa de Calor</title>
+  <title>Detecção e Análise Ergonômica</title>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/posenet"></script>
@@ -56,7 +56,7 @@
   </style>
 </head>
 <body>
-  <h1>Análise Ergonômica e Mapa de Calor</h1>
+  <h1>Detecção e Análise Ergonômica</h1>
   <video id="videoElement" autoplay playsinline muted></video>
   <canvas id="canvas"></canvas>
   <div id="metrics">
@@ -65,7 +65,7 @@
   </div>
 
   <div id="logContainer">
-    <h2>Log Ergonômico</h2>
+    <h2>Log</h2>
     <ul id="logList"></ul>
   </div>
 
@@ -91,7 +91,6 @@
     let currentStream;
     let usingFrontCamera = true;
     let isPaused = false;
-    const FOV = 60; // Campo de visão da câmera para conversão em escala real
 
     async function setupCamera(facingMode = "user") {
       if (currentStream) {
@@ -111,13 +110,6 @@
       return Math.sqrt(Math.pow(p1.x - p2.x, 2) + Math.pow(p1.y - p2.y, 2));
     }
 
-    function convertToRealScale(pixelValue) {
-      const screenWidth = canvas.width;
-      const estimatedDistance = 1.5; // Distância média da câmera para o corpo (1.5m)
-      const realScaleFactor = (2 * estimatedDistance * Math.tan((FOV / 2) * (Math.PI / 180))) / screenWidth;
-      return (pixelValue * realScaleFactor).toFixed(2); // Retorna em metros
-    }
-
     function logMessage(message) {
       const logItem = document.createElement("li");
       logItem.textContent = message;
@@ -125,12 +117,24 @@
       logList.parentElement.scrollTop = logList.parentElement.scrollHeight;
     }
 
-    function renderHeatMap(pose) {
+    function renderObjects(objects) {
+      objects.forEach((obj) => {
+        const [x, y, width, height] = obj.bbox;
+        ctx.strokeStyle = "blue";
+        ctx.lineWidth = 2;
+        ctx.strokeRect(x, y, width, height);
+        ctx.fillStyle = "blue";
+        ctx.font = "16px Arial";
+        ctx.fillText(`${obj.class} (${(obj.score * 100).toFixed(1)}%)`, x, y > 10 ? y - 5 : 10);
+      });
+    }
+
+    function renderPose(pose) {
       pose.keypoints.forEach((keypoint) => {
         if (keypoint.score > 0.5) {
           ctx.beginPath();
-          ctx.arc(keypoint.position.x, keypoint.position.y, 10, 0, 2 * Math.PI);
-          ctx.fillStyle = "rgba(255, 0, 0, 0.6)";
+          ctx.arc(keypoint.position.x, keypoint.position.y, 5, 0, 2 * Math.PI);
+          ctx.fillStyle = "red";
           ctx.fill();
         }
       });
@@ -142,17 +146,17 @@
       const leftHip = pose.keypoints[11].position;
       const leftWrist = pose.keypoints[9].position;
 
-      const shoulderWidth = convertToRealScale(calculateDistance(leftShoulder, rightShoulder));
-      const torsoHeight = convertToRealScale(calculateDistance(leftShoulder, leftHip));
-      const armLength = convertToRealScale(calculateDistance(leftShoulder, leftWrist));
+      const shoulderWidth = calculateDistance(leftShoulder, rightShoulder);
+      const torsoHeight = calculateDistance(leftShoulder, leftHip);
+      const armLength = calculateDistance(leftShoulder, leftWrist);
 
-      logMessage(`Largura dos ombros: ${shoulderWidth} m`);
-      logMessage(`Altura do tronco: ${torsoHeight} m`);
-      logMessage(`Comprimento do braço: ${armLength} m`);
+      const shoulderStatus = shoulderWidth > 100 ? "Dentro dos padrões" : "Fora dos padrões";
+      const torsoStatus = torsoHeight > 150 ? "Dentro dos padrões" : "Fora dos padrões";
+      const armStatus = armLength > 50 ? "Dentro dos padrões" : "Fora dos padrões";
 
-      if (shoulderWidth < 0.35) logMessage("⚠️ Postura incorreta: ombros muito fechados.");
-      if (torsoHeight < 0.50) logMessage("⚠️ Postura incorreta: coluna curvada.");
-      if (armLength < 0.25) logMessage("⚠️ Postura incorreta: braços muito dobrados.");
+      logMessage(`Largura dos ombros: ${shoulderWidth.toFixed(2)} px - ${shoulderStatus}`);
+      logMessage(`Altura do tronco: ${torsoHeight.toFixed(2)} px - ${torsoStatus}`);
+      logMessage(`Comprimento do braço: ${armLength.toFixed(2)} px - ${armStatus}`);
     }
 
     async function detectLoop() {
@@ -162,13 +166,39 @@
       ctx.drawImage(videoElement, 0, 0, canvas.width, canvas.height);
 
       const objects = await cocoModel.detect(videoElement);
+      renderObjects(objects);
+
       const pose = await poseModel.estimateSinglePose(videoElement);
+      renderPose(pose);
 
       checkErgonomicStandards(pose);
-      renderHeatMap(pose);
 
       requestAnimationFrame(detectLoop);
     }
+
+    switchCameraBtn.addEventListener("click", async () => {
+      usingFrontCamera = !usingFrontCamera;
+      await setupCamera(usingFrontCamera ? "user" : "environment");
+    });
+
+    pauseCaptureBtn.addEventListener("click", () => {
+      isPaused = !isPaused;
+      pauseCaptureBtn.textContent = isPaused ? "Retomar Captura" : "Pausar Captura";
+      if (!isPaused) detectLoop();
+    });
+
+    startVRBtn.addEventListener("click", async () => {
+      alert("Modo VR ativado! (Simulação)");
+    });
+
+    downloadReportBtn.addEventListener("click", () => {
+      const report = { timestamp: new Date().toISOString(), metrics: metricsList.innerText };
+      const blob = new Blob([JSON.stringify(report, null, 2)], { type: "application/json" });
+      const link = document.createElement("a");
+      link.href = URL.createObjectURL(blob);
+      link.download = "ergonomic_report.json";
+      link.click();
+    });
 
     async function init() {
       canvas.width = 640;
