--- a/testevr.html
+++ b/testevr.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Detecção e Análise Ergonômica</title>
+  <title>Detecção de Objetos e Análise Ergonômica</title>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/posenet"></script>
   <style>
     body {
@@ -55,7 +56,7 @@
   </style>
 </head>
 <body>
-  <h1>Detecção e Análise Ergonômica</h1>
+  <h1>Detecção de Objetos e Análise Ergonômica</h1>
   <video id="videoElement" autoplay playsinline muted></video>
   <canvas id="canvas"></canvas>
   <div id="metrics">
@@ -71,6 +72,8 @@
   <div id="controls">
     <button id="switchCamera">Trocar Câmera</button>
     <button id="pauseCapture">Pausar Captura</button>
+    <button id="startVR">Ativar VR</button>
+    <button id="downloadReport">Baixar Relatório</button>
   </div>
 
   <script>
@@ -80,12 +83,16 @@
     const metricsList = document.getElementById("metricsList");
     const logList = document.getElementById("logList");
     const switchCameraBtn = document.getElementById("switchCamera");
+    const pauseCaptureBtn = document.getElementById("pauseCapture");
+    const startVRBtn = document.getElementById("startVR");
+    const downloadReportBtn = document.getElementById("downloadReport");
+
+    let cocoModel, poseModel;
     let currentStream;
     let usingFrontCamera = true;
-    let poseModel;
-
-    const FOV = 60; // Campo de visão da câmera para conversão em escala real
-    const CAMERA_DISTANCE = 1.5; // Distância estimada da câmera ao objeto em metros
+    let isPaused = false;
+    let detectionCount = {};
+    let reportData = [];
 
     async function setupCamera(facingMode = "user") {
       if (currentStream) {
@@ -97,17 +104,8 @@
     }
 
     async function loadModels() {
+      cocoModel = await cocoSsd.load();
       poseModel = await posenet.load();
-    }
-
-    function calculateDistance(p1, p2) {
-      return Math.sqrt(Math.pow(p1.x - p2.x, 2) + Math.pow(p1.y - p2.y, 2));
-    }
-
-    function convertToRealScale(pixelValue) {
-      const screenWidth = canvas.width;
-      const realScaleFactor = (2 * CAMERA_DISTANCE * Math.tan((FOV / 2) * (Math.PI / 180))) / screenWidth;
-      return (pixelValue * realScaleFactor).toFixed(4); // Retorna em metros
     }
 
     function logMessage(message) {
@@ -115,6 +113,25 @@
       logItem.textContent = message;
       logList.appendChild(logItem);
       logList.parentElement.scrollTop = logList.parentElement.scrollHeight;
+    }
+
+    function renderObjects(objects) {
+      objects.forEach((obj) => {
+        const [x, y, width, height] = obj.bbox;
+
+        detectionCount[obj.class] = (detectionCount[obj.class] || 0) + 1;
+        const count = detectionCount[obj.class];
+
+        ctx.strokeStyle = "blue";
+        ctx.lineWidth = 2;
+        ctx.strokeRect(x, y, width, height);
+        ctx.fillStyle = "blue";
+        ctx.font = "16px Arial";
+        ctx.fillText(`${obj.class} (${count}x)`, x, y > 10 ? y - 5 : 10);
+
+        logMessage(`Objeto: ${obj.class} - Detecções: ${count}`);
+        reportData.push({ type: "object", class: obj.class, count, bbox: obj.bbox });
+      });
     }
 
     function renderPose(pose) {
@@ -125,10 +142,23 @@
           ctx.fillStyle = "red";
           ctx.fill();
 
-          // Exibe os keypoints
           ctx.fillStyle = "yellow";
           ctx.font = "10px Arial";
-          ctx.fillText(keypoint.part, keypoint.position.x + 5, keypoint.position.y + 5);
+          ctx.fillText(
+            `${keypoint.part}: (${keypoint.position.x.toFixed(1)}, ${keypoint.position.y.toFixed(1)})`,
+            keypoint.position.x + 5,
+            keypoint.position.y + 5
+          );
+
+          logMessage(
+            `Keypoint: ${keypoint.part} - X: ${keypoint.position.x.toFixed(1)}, Y: ${keypoint.position.y.toFixed(1)}`
+          );
+          reportData.push({
+            type: "keypoint",
+            part: keypoint.part,
+            position: keypoint.position,
+            score: keypoint.score,
+          });
         }
       });
     }
@@ -137,29 +167,25 @@
       const leftShoulder = pose.keypoints[5].position;
       const rightShoulder = pose.keypoints[6].position;
       const leftHip = pose.keypoints[11].position;
-      const leftWrist = pose.keypoints[9].position;
 
-      // Calcula distâncias em metros
-      const shoulderWidthMeters = convertToRealScale(calculateDistance(leftShoulder, rightShoulder));
-      const torsoHeightMeters = convertToRealScale(calculateDistance(leftShoulder, leftHip));
-      const armLengthMeters = convertToRealScale(calculateDistance(leftShoulder, leftWrist));
+      const shoulderWidth = Math.sqrt(
+        Math.pow(leftShoulder.x - rightShoulder.x, 2) +
+        Math.pow(leftShoulder.y - rightShoulder.y, 2)
+      );
 
-      // Converte para centímetros
-      const shoulderWidthCm = (shoulderWidthMeters * 100).toFixed(2);
-      const torsoHeightCm = (torsoHeightMeters * 100).toFixed(2);
-      const armLengthCm = (armLengthMeters * 100).toFixed(2);
-
-      // Exibe no log
-      logMessage(`Largura dos ombros: ${shoulderWidthMeters} m (${shoulderWidthCm} cm)`);
-      logMessage(`Altura do tronco: ${torsoHeightMeters} m (${torsoHeightCm} cm)`);
-      logMessage(`Comprimento do braço: ${armLengthMeters} m (${armLengthCm} cm)`);
+      logMessage(`Largura dos ombros: ${shoulderWidth.toFixed(2)} pixels`);
     }
 
     async function detectLoop() {
+      if (isPaused) return;
+
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       ctx.drawImage(videoElement, 0, 0, canvas.width, canvas.height);
 
-      const pose = await poseModel.estimateSinglePose(videoElement, { flipHorizontal: false });
+      const objects = await cocoModel.detect(videoElement);
+      renderObjects(objects);
+
+      const pose = await poseModel.estimateSinglePose(videoElement);
       renderPose(pose);
       checkErgonomicStandards(pose);
 
@@ -169,6 +195,24 @@
     switchCameraBtn.addEventListener("click", async () => {
       usingFrontCamera = !usingFrontCamera;
       await setupCamera(usingFrontCamera ? "user" : "environment");
+    });
+
+    pauseCaptureBtn.addEventListener("click", () => {
+      isPaused = !isPaused;
+      pauseCaptureBtn.textContent = isPaused ? "Retomar Captura" : "Pausar Captura";
+      if (!isPaused) detectLoop();
+    });
+
+    startVRBtn.addEventListener("click", async () => {
+      alert("Modo VR ativado! (Simulação)");
+    });
+
+    downloadReportBtn.addEventListener("click", () => {
+      const blob = new Blob([JSON.stringify(reportData, null, 2)], { type: "application/json" });
+      const link = document.createElement("a");
+      link.href = URL.createObjectURL(blob);
+      link.download = "report.json";
+      link.click();
     });
 
     async function init() {
